--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="plugin-verusvueapp"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
